blend file is huge, verts count only 7000, lag is huge #42260

Closed
opened 2014-10-16 19:25:03 +02:00 by Denis · 19 comments

System Information
windows 8 64 bit, gtx 750ti, intel hd graphics, core i3 540

Blender Version
Broken: I worked in 2.71
Worked: (optional)

Short description of error
I was modelling front panel part for cd player, and at some point blend file just skyrocketed in size, it is very laggy and unresponsive, ram usage is full, what system has, and inside blender it shows that it uses even more, I have seen over 10 gb of memory usage. And it all is cause by one mesh, I appended it to the single file, please take a look.

blend file is huge (almost 1 gb), there is nothing in it, just a mesh with 7000 verts.

Exact steps for others to reproduce the error

here is blend file link:

https://yadi.sk/d/DMkIOG_Mc5PDZ

**System Information** windows 8 64 bit, gtx 750ti, intel hd graphics, core i3 540 **Blender Version** Broken: I worked in 2.71 Worked: (optional) **Short description of error** I was modelling front panel part for cd player, and at some point blend file just skyrocketed in size, it is very laggy and unresponsive, ram usage is full, what system has, and inside blender it shows that it uses even more, I have seen over 10 gb of memory usage. And it all is cause by one mesh, I appended it to the single file, please take a look. blend file is huge (almost 1 gb), there is nothing in it, just a mesh with 7000 verts. **Exact steps for others to reproduce the error** here is blend file link: https://yadi.sk/d/DMkIOG_Mc5PDZ
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Denis-3

Added subscriber: @Denis-3

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, tested this file on:

Opensuse 13.1/64
Intel i5 3770K
GTX 760 4 GB (Display)
GTX 560Ti 1.28 GB 448 Cores
Driver 343.19

Blender 2.72

There are 2300 UV-Maps in this file, see in Object Data Slot.
May it is a way to delete them all in one rush but I don´t know it.

Cheers, mib

Hi, tested this file on: Opensuse 13.1/64 Intel i5 3770K GTX 760 4 GB (Display) GTX 560Ti 1.28 GB 448 Cores Driver 343.19 Blender 2.72 There are 2300 UV-Maps in this file, see in Object Data Slot. May it is a way to delete them all in one rush but I don´t know it. Cheers, mib
Author

thanks for getting looked at the file, lol, why is there 2300 UVs there, any idea, bug or ...?

thanks for getting looked at the file, lol, why is there 2300 UVs there, any idea, bug or ...?

Added subscriber: @lamoot

Added subscriber: @lamoot

You can manually assign a maximum of 8 UV maps to a mesh. This number goes higher if you join two meshes each with its own number of uniquely named UV maps, but to get to 2300 of them it must be a bug.

Did you use any UV addons on the mesh?

You can manually assign a maximum of 8 UV maps to a mesh. This number goes higher if you join two meshes each with its own number of uniquely named UV maps, but to get to 2300 of them it must be a bug. Did you use any UV addons on the mesh?
Author

Hi lamoot,

No I did not use any add-ons, apart from layer management add-on, and work spent on project add-on, but as you can see the mesh is quite complex, that is because I used boolean modifier a lot! I joined meshes, made wholes, etc. But how the hell I managed to get 2300 uniquely named UVs in those meshes is beyond my understanding, hardly I used boolean modifier more than 100 times.

BUT anyways, I found a way to remove all those UVs (thanks to mib2berlin for pointing out). I used python script. And it took very long time to do that, blender was totally unresponsive during the process, Iol I knew its deleting them, just because in resource monitor I saw memory usage dropping slowly. File size after that procedure dropped from 1 gb to 1 mb :). The link to the script, If somebody need it, is below.

http://blenderartists.org/forum/showthread.php?254004-Accessing-UV-data-in-Python-script&p=2689074&viewfull=1#post2689074

Hi lamoot, No I did not use any add-ons, apart from layer management add-on, and work spent on project add-on, but as you can see the mesh is quite complex, that is because I used boolean modifier a lot! I joined meshes, made wholes, etc. But how the hell I managed to get 2300 uniquely named UVs in those meshes is beyond my understanding, hardly I used boolean modifier more than 100 times. BUT anyways, I found a way to remove all those UVs (thanks to mib2berlin for pointing out). I used python script. And it took very long time to do that, blender was totally unresponsive during the process, Iol I knew its deleting them, just because in resource monitor I saw memory usage dropping slowly. File size after that procedure dropped from 1 gb to 1 mb :). The link to the script, If somebody need it, is below. http://blenderartists.org/forum/showthread.php?254004-Accessing-UV-data-in-Python-script&p=2689074&viewfull=1#post2689074

Added subscriber: @mont29

Added subscriber: @mont29

Yeah, getting thousands of UVs on a single mesh should not be possible… Looks like we are missing some checks in merging operations here :/

Yeah, getting thousands of UVs on a single mesh should not be possible… Looks like we are missing some checks in merging operations here :/

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Campbell, is our max number of 8 UVMaps a strict enforcement? If so, I’d suggest to add an option of cdlayers merging funcs to specify a maximum number of layers in result, and e.g. to fallback to 'by position' merging when 'by name' would generate too much layers (with a nice warning to user)?

Campbell, is our max number of 8 UVMaps a strict enforcement? If so, I’d suggest to add an option of cdlayers merging funcs to specify a maximum number of layers in result, and e.g. to fallback to 'by position' merging when 'by name' would generate too much layers (with a nice warning to user)?

Added subscriber: @Sergey

Added subscriber: @Sergey

@mont29, it should be limited by MAX_MTFACE.

@mont29, it should be limited by MAX_MTFACE.
Bastien Montagne self-assigned this 2014-10-21 12:14:53 +02:00

OK, will see how to handle those cases in best way then.

OK, will see how to handle those cases in best way then.

This issue was referenced by 21836250c0

This issue was referenced by 21836250c06c87bb267948bcc559b474e8ced564

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 21836250c0.

Closed by commit 21836250c0.
Author

Removed subscriber: @Denis-3

Removed subscriber: @Denis-3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42260
No description provided.