source/blender/blenkernel/BKE_customdata.h
@@ -327,6 +327,7 @@ int CustomData_sizeof(int type);
 /* get the name of a layer type */
 const char *CustomData_layertype_name(int type);
 bool        CustomData_layertype_is_singleton(int type);
+int         CustomData_layertype_layers_max(const int type);
 
 /* make sure the name of layer at index is unique */
 void CustomData_set_layer_unique_name(struct CustomData *data, int index);
